add and fix block textures, add client side transparency to block

--- a/src/main/resources/assets/anachrona/lang/en_us.json
+++ b/src/main/resources/assets/anachrona/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.anachrona.antikythera": "Antikythera",
-  "itemGroup.anachrona": "Anachrona"
+  "itemGroup.anachrona": "Anachrona",
+  "block.anachrona.catcher": "Mushi Catcher"
 }
